# place-recognition

./: .gitignore  README.md  evaluation_report.md  main.py  pyproject.toml
src/: dataset.py  dedup.py  evaluate.py  index.py  logger.py  model.py  search.py
tests/: conftest.py  test_dataset.py  test_dedup.py  test_index.py  test_metrics.py
