[project]
name = "place-recognition"
version = "0.1.0"
description = "Image-Based Place Recognition & Retrieval System"
requires-python = ">=3.11, <3.12" 
dependencies = [
    "faiss-cpu>=1.11.0",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]
torchvision = [
  { index = "pytorch-cpu" }
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
line-length = 100
target-version = "py311"